[tool.poetry]
name = "thola-nautobot"
version = "0.2.0"
description = "Thola plugin for Nautobot"
authors = ["Thola Team"]
license = "BSD-2-Clause License"

[tool.poetry.dependencies]
python = "^3.8"
nautobot = "~1.0"
thola-client = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
